syntax = "proto3";

package com.example.armeria.grpc;
option java_package = "com.example.armeria.grpc";
option java_multiple_files = true;

import "google/protobuf/empty.proto";

service BlogService {
  rpc CreateBlogPost (CreateBlogPostRequest) returns (BlogPost) {}
  rpc GetBlogPost (GetBlogPostRequest) returns (BlogPost) {}
  rpc ListBlogPosts (ListBlogPostsRequest) returns (ListBlogPostsResponse) {}
  rpc UpdateBlogPost (UpdateBlogPostRequest) returns (BlogPost) {}
  rpc DeleteBlogPost (DeleteBlogPostRequest) returns (google.protobuf.Empty) {}
}
message BlogPost {
  int64 id = 1;
  string title = 2;
  string content = 3;
  int64 createdAt = 4;
  int64 modifiedAt = 5;
}

message CreateBlogPostRequest {
  string title = 1;
  string content = 2;
}

message GetBlogPostRequest {    // For retrieving a single post
  int64 id = 1;
}

message ListBlogPostsRequest {  // For retrieving multiple posts
  bool descending = 1;
}

message UpdateBlogPostRequest {
  int64 id = 1;
  string title = 2;
  string content = 3;
}

message DeleteBlogPostRequest {
  int64 id = 1;
}

message ListBlogPostsResponse {
  repeated BlogPost blogs = 1;
}